--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -197,7 +197,8 @@ table th {
 table span.pontosGraficos {
   display: block;
   right: 1;
-  margin-top: 15px;
+  margin-top: 10px;
+  font-weight: 800;
 }
 
 .highlight {
@@ -268,4 +269,22 @@ table tr th:nth-child(16) {
   color: #000000;
   font-size: 0.95rem !important;
   padding: 0;
+}
+
+.placarJogos {
+  color: #000000;
+  font-size: 0.95rem !important;
+  margin-top: 15px;
+  display: block;
+  font-weight: 750;
+  padding: 0;
+}
+
+.timesSpan {
+  font-size: 11px;
+  font-weight: 700;
+}
+
+.spanX {
+  font-weight: 700;
 }
